added e commerce vector search and mongo connection

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,11 @@ MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_DB=superapp_db
 
+# Database Settings (MongoDB)
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB_NAME=superapp_ecommerce
+MONGODB_SCHEMA_SAMPLE_SIZE=100
+
 # Encryption Settings
 ENCRYPTION_KEY=your-32-byte-encryption-key-base64
 SALT_ROUNDS=12
