--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pillow>=11.2.1",
     "pytesseract>=0.3.13",
+    "pymongo>=4.13.0",
+    "numpy>=2.2.6",
+    "faiss-cpu>=1.11.0",
+    "sentence-transformers>=4.1.0",
 ]
 
 [dependency-groups]
